[gd_scene load_steps=2 format=3 uid="uid://dafcfpors4fb6"]

[ext_resource type="Script" uid="uid://be8utdm0slmph" path="res://Scripts/UI/TopPanel/Components/model_optimizer.gd" id="1_x5vtu"]

[node name="ModelOptimizer" type="Window"]
transparent_bg = true
initial_position = 1
size = Vector2i(500, 300)
script = ExtResource("1_x5vtu")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Model Optimizer
(UNSTABLE)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Trim Images :"

[node name="ImageTrim" type="CheckBox" parent="MarginContainer/VBoxContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resize Model :"

[node name="ImageResize" type="CheckBox" parent="MarginContainer/VBoxContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resize Percentage :"

[node name="ResizePrecent" type="SpinBox" parent="MarginContainer/VBoxContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
min_value = 10.0
value = 50.0
suffix = "%"

[node name="Warning" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
text = "Note : Due to this being a destructive action, this will save a new Model with \"Optimized\" next to the original file.
APNG and GIF optimization isn't supported yet."
autowrap_mode = 2

[node name="ApplyOptimization" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Grid/ImageTrim" to="." method="_on_image_trim_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Grid/ImageResize" to="." method="_on_image_resize_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Grid/ResizePrecent" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ApplyOptimization" to="." method="_on_apply_optimization_pressed"]
